@@ -1,5 +1,12 @@
 2001-10-14  Kevin Vandersloot <kfv101@psu.edu>
 
+	* interface.c: improve the layout of the memory/swap sizes
+	to make them more readable
+
+	* load-graph.c: update the labels accordingly
+
+2001-10-14  Kevin Vandersloot <kfv101@psu.edu>
+
 	* interface.c: remove the free space column in the disk
 	list and make the mount directory column the second
 	column. Hopefully makes the list a little easier to digest.
